2002-03-25  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:  Keep the value of $::auto_path
	unchanged, so that the tcltest package can test code that depends
	on auto-loading.  If a testing application needs $::auto_path pruned,
	it should do that itself.  [Bug 495726]

2002-03-25  Miguel Sofer  <msofer@users.sourceforge.net>

	* doc/CrtTrace.3: small doc correction
	* generic/tclBasic.c (Tcl_DeleteTrace): Allow NULL callback on
	trace deletions [Bug 534728] (Hemang Lavana).

2002-03-24  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclBasic.c (Tcl_EvalObjv): replaced obscure, incorrect
	code as described in [Bug 533907] (Don Porter).

2002-03-24  Don Porter  <dgp@users.sourceforge.net>

	* library/tcltest/tcltest.tcl:  Use [interpreter] to set/query the
	executable currently running the tcltest package.  [Bug 454050]

	* library/tcltest/tcltest.tcl:  Allow non-proc commands to be used
	as the customization hooks.  [Bug 495662]

2002-03-24  Vince Darley  <vincentdarley@users.sourceforge.net>

	* generic/tclFilename.c:
	* generic/tclFCmd.c:
	* generic/tclTest.c:
	* generic/tcl.h:
	* generic/tclIOUtil.c:
	* win/tclWinFile.c:
	* win/tclWinFCmd.c:
	* win/tclWinPipe.c:
	* unix/tclUnixFile.c:
	* unix/tclUnixFCmd.c:
	* mac/tclMacFile.c:
	* doc/FileSystem.3:
	* doc/file.n:
	* tests/cmdAH.test:
	* tests/fileName.test:
	* tests/fileSystem.test: (new file)	
	* tests/winFCmd.test: fix [Bug 511666] and [Bug 511658],
	and improved documentation of some aspects of the filesystem,
	particularly 'Tcl_FSMatchInDirectory' which now might match
	a single file/directory only, and 'file normalize' which
	wasn't very clear before.  Removed inconsistency betweens
	docs and the Tcl_Filesystem structure.  Also fixed 
	[Bug 523217] and corrected file normalization on Unix so that 
	it expands symbolic links.  Added some new tests of the 
	filesystem code (in the new file 'fileSystem.test'), and 
	some extra tests for correct handling of symbolic links.